chore: rm return value

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -21,7 +21,7 @@
       } catch (e) {}
 
       if (!tokenInfo || tokenInfo.startTime !== startTime) {
-        return undefined
+        return
       }
 
       token = tokenInfo.token
